# MiroFish

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README-EN.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
.playwright-mcp/: page-2026-04-24T00-03-16-355Z.yml  page-2026-04-24T00-22-21-463Z.yml  page-2026-04-24T00-23-24-644Z.yml  page-2026-04-24T00-24-09-220Z.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: index.html  package.json
frontend/src/api/: graph.js  index.js  report.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/i18n/: index.js
locales/: ru.json
tests/: test-document.md  test-prompt.txt
(+10 files in other folders)
