[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish — простой и универсальный движок коллективного интеллекта для прогнозирования чего угодно"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Основные фреймворки
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # Работа с LLM
    "openai>=1.0.0",

    # Zep Cloud
    "zep-cloud==3.13.0",

    # Симуляция социальных сетей OASIS
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # Обработка файлов
    "PyMuPDF>=1.24.0",
    # Определение кодировки (поддержка текстовых файлов в кодировке, отличной от UTF-8)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Вспомогательные библиотеки
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
